[package]
name = "nfs"
version = "0.1.1"
edition = "2021"
authors = ["Finn Rudolph"]
license = "MIT"
description = "Implementation of the Number Field Sieve"
repository = "https://github.com/finn-rudolph/nfs"
readme = "README.md"
keywords = ["factorization", "quadratic-sieve", "number-field-sieve"]
categories = ["algorithms", "mathematics"]

[dependencies]
log = "0.4.19"
rand = "0.8.5"
rug = "1.19.2"
env_logger = "0.10.0"
